2004-01-27  Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: Use WIN_PATH_SYSTEM_MINGW for windows.
	* configure.ac: Also allow version autoconf-2.56. If this breaks
	anything, then of course the change should be reverted.
	Also use WIN_PATH_SYSTEM_MINGW for gwenhyfar_libraries.
	
	
2004/01/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added a note about CVS usability to STYLE file


2004/01/25: Ronny Buchmann <ronny-hbci@vlugnet.org>
---------------------------------------------------
- remove autogenerated files


2004/01/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added new base module: GWEN_RingBuffer; this module introduces a
  circular read/write buffer.
- started cleaning up function names
- added statistical functions to GWEN_RingBuffer


2004/01/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- msgengine: added properties "readbin" and "writebin" to <ELEM> tags.
  If "type" is "bin" then these properties are checked (default to "1").
  If "0" then the binary data will not be parsed (this is needed to fix a
  problem in OpenHBCI with banks, which send partial SWIFT MT942 which
  have to be combined AFTER receiving all parts. So this parsing clearly can
  not be done from within the message engine)


===========================================================================
MARK: released gwenhywfar-0.9.5 (2004/01/21)
===========================================================================


2004/01/21: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- applied a build patch submitted by Ronny Buchmann
- fixed a severe bug in signature code
- changed version string determination:
  if TAG is "cvs" then the full version string (including major, minor,
  patchlevel, build and tag) are used.
  Otherwise all traling "0" in a version number are removed.

