@@ -159,7 +159,7 @@ case "$OS_TYPE" in
     	;;
     windows)
         AC_DEFINE_UNQUOTED(BUILDING_GWEN_DLL,1, [Define if DLL is built])
-        AQ_WINDOZE
+        ACX_WINDOWS_PATHS
         gwenhywfar_libs="-L${WIN_PATH_SYSTEM_MINGW} -lgwenhywfar32"
         gwenhywfar_includes="-I`eval echo $prefix/include`"
         gwenhywfar_sections=""
