@@ -1,5 +1,6 @@
 EXTRA_DIST=\
  acx_compile_warn.m4 \
+ acx_windows_paths.m4 \
  as-scrub-include.m4 \
  debugmode.m4 \
  docpath.m4 \
